<resources xmlns:tools="http://schemas.android.com/tools">
    <string tools:context="general" name="app_name">Archlinux Forums</string>
    <string tools:context="general" name="loading">Loading…</string>

    <string tools:context="'about this app' dialog" name="the_maker" translatable="false">Kanedias</string>
    <string tools:context="'about this app' dialog" name="house_of_maker" translatable="false">House of Maker</string>
    <string tools:context="'about this app' dialog" name="gplv3" translatable="false">GPLv3</string>
    <string tools:context="'about this app' dialog" name="version">Version</string>
    <string tools:context="'about this app' dialog" name="license">License</string>
    <string tools:context="'about this app' dialog" name="author">Author</string>
    <string tools:context="'about this app' dialog" name="donate">Donate</string>
    <string tools:context="'about this app' dialog" name="send_email">Send e-mail</string>
    <string tools:context="'about this app' dialog" name="source_code">Source code</string>
    <string tools:context="'about this app' dialog" name="fork_on_gitlab">Fork on GitLab</string>
    <string tools:context="'about this app' dialog" name="report_bug">Report bug</string>
    <string tools:context="'about this app' dialog" name="gitlab_issue_tracker">GitLab issue tracker</string>

    <string tools:context="message view elements" name="replies_prefix">Replies:</string>
    <string tools:context="message view elements" name="views_prefix">Views:</string>
    <string tools:context="message view elements" name="topic_pinned">Topic pinned</string>
    <string tools:context="message view elements" name="topic_closed">Topic closed</string>
    <string tools:context="message view elements" name="message_index">Message index</string>

    <string tools:context="search message view elements" name="navigate_to_forum">To forum:</string>
    <string tools:context="search message view elements" name="navigate_to_topic">To topic:</string>
    <string tools:context="search message view elements" name="navigate_to_message">To message:</string>

    <string tools:context="fullscreen image viewer" name="share_link_using">Share link using…</string>
    <string tools:context="fullscreen image viewer" name="share_image_using">Share image using…</string>
    <string tools:context="fullscreen image viewer" name="downloading_image">Downloading image…</string>
    <string tools:context="fullscreen image viewer" name="image_saved_as">Image saved as</string>

    <string tools:context="ACRA dialog" name="app_crashed">Sorry, app just crashed</string>
    <string tools:context="ACRA dialog" name="app_crash_report">Archlinux Forums crash report</string>
    <string tools:context="ACRA dialog" name="leave_crash_comment">Please describe your last performed action before the crash</string>

    <string tools:context="sidebar panel" name="open">Open</string>
    <string tools:context="sidebar panel" name="close">Close</string>
    <string tools:context="sidebar panel" name="hello_plus_comma">Hello,</string>
    <string tools:context="sidebar panel" name="guest">Guest</string>
    <string tools:context="sidebar panel" name="enter">Enter</string>
    <string tools:context="sidebar panel" name="favorite_topics">Favorites</string>
    <string tools:context="sidebar panel" name="replies_topics">Replies</string>
    <string tools:context="sidebar panel" name="recent_topics">Recent</string>
    <string tools:context="sidebar panel" name="new_messages_topics">With new messages</string>
    <string tools:context="sidebar panel" name="my_topics">My topics</string>
    <string tools:context="sidebar panel" name="my_messages">My messages</string>
    <string tools:context="sidebar panel" name="my_subscriptions">My subscriptions</string>

    <string tools:context="login procedure" name="username">Username</string>
    <string tools:context="login procedure" name="password">Password</string>
    <string tools:context="login procedure" name="please_wait">Please wait</string>
    <string tools:context="login procedure" name="logging_in">Logging in…</string>
    <string tools:context="login procedure" name="login_successful">Login successful</string>

    <string tools:context="error reporting" name="error_connecting">Error connecting</string>

    <string tools:context="topic/forum browsing" name="page">Page</string>
    <string tools:context="topic/forum browsing" name="page_n_of_k">Page %d of %d</string>
    <string tools:context="topic/forum browsing" name="reply">Reply</string>

    <string tools:context="image upload" name="no_permissions">Permission denied, can\'t perform action</string>
    <string tools:context="image upload" name="select_image_to_upload">Select image to upload</string>
    <string tools:context="image upload" name="no_file_manager_found">No file manager found</string>
    <string tools:context="image upload" name="uploading">Uploading…</string>
    <string tools:context="image upload" name="select_image_size">Select image size to insert</string>

    <string tools:context="text editor" name="subject">Subject</string>
    <string tools:context="text editor" name="content">Content</string>
    <string tools:context="text editor" name="more_tag_default">Read more</string>
    <string tools:context="text editor" name="bold_font">Bold font</string>
    <string tools:context="text editor" name="italic_font">Italic font</string>
    <string tools:context="text editor" name="underlined_font">Underlined font</string>
    <string tools:context="text editor" name="strikethrough_font">Strikethrough font</string>
    <string tools:context="text editor" name="insert_code_block">Insert code block</string>
    <string tools:context="text editor" name="insert_quote_block">Insert quote block</string>
    <string tools:context="text editor" name="insert_numbered_list">Insert numbered list</string>
    <string tools:context="text editor" name="insert_bulleted_list">Insert bulleted list</string>
    <string tools:context="text editor" name="insert_link">Insert link</string>
    <string tools:context="text editor" name="insert_image">Insert image</string>
    <string tools:context="text editor" name="insert_from_clipboard">Insert from clipboard</string>
    <string tools:context="text editor" name="insert_spoiler_tag">Insert spoiler tag</string>
    <string tools:context="text editor" name="insert_smilie">Insert smilie</string>
    <string tools:context="text editor" name="submit">Submit</string>
    <string tools:context="text editor" name="submitting">Submitting…</string>

    <string tools:context="bottom paging interface" name="to_first_page">To first page</string>
    <string tools:context="bottom paging interface" name="to_previous_page">To previous page</string>
    <string tools:context="bottom paging interface" name="to_next_page">To next page</string>
    <string tools:context="bottom paging interface" name="to_last_page">To last page</string>
    <string tools:context="bottom paging interface" name="current_page">Current page</string>
    <string tools:context="bottom paging interface" name="jump_to_page">Jump to page</string>

    <string tools:context="what's new dialogue" name="whats_new">What\'s new?</string>
    <string tools:context="what's new dialogue" name="help_the_project">Help the project</string>

    <string tools:context="main action bar menu" name="menu_settings">Settings</string>
    <string tools:context="main action bar menu" name="menu_about">About</string>
    <string tools:context="main action bar menu" name="menu_donate">Donate</string>
    <string tools:context="main action bar menu" name="menu_search">Search</string>

    <string tools:context="topic contents menu" name="share">Share</string>
    <string tools:context="topic contents menu" name="add_to_favorites">Add to favorites</string>
    <string tools:context="topic contents menu" name="remove_from_favorites">Remove from favorites</string>
    <string tools:context="topic contents menu" name="subscribe">Subscribe</string>
    <string tools:context="topic contents menu" name="unsubscribe">Unsubscribe</string>
    <string tools:context="topic contents menu toast" name="added_to_favorites">Added to favorites</string>
    <string tools:context="topic contents menu toast" name="removed_from_favorites">Removed from favorites</string>
    <string tools:context="topic contents menu toast" name="subscribed">Subscribed</string>
    <string tools:context="topic contents menu toast" name="unsubscribed">Unsubscribed</string>

    <string tools:context="settings activity" name="api_home_server">API home server</string>
    <string tools:context="settings activity" name="api_home_server_hint">http[s]://hostname[:port]/[endpoint]</string>
    <string tools:context="settings activity" name="api_home_server_sum">Don\'t change this if you don\'t know what you\'re doing</string>
    <string tools:context="settings activity" name="invalid_home_server_endpoint">Invalid homeserver API endpoint, reset to default</string>
    <string tools:context="settings activity" name="app_theme">Application theme</string>
    <string tools:context="settings activity" name="app_theme_summary">Applied fully after application restart</string>

    <string tools:context="message overflow menu" name="edit">Edit</string>
    <string tools:context="message overflow menu" name="delete">Delete</string>
    <string tools:context="message overflow menu" name="quote">Quote</string>
    <string tools:context="message overflow menu" name="report">Report</string>
    <string tools:context="message overflow menu" name="describe_why_reporting">Describe reason for reporting</string>
    <string tools:context="message overflow menu" name="reported">Reported</string>

    <string tools:context="delete message dialog" name="confirm_action">Confirm action</string>
    <string tools:context="delete message dialog" name="delete_message_question">Delete this message?</string>

    <string-array tools:context="image upload" name="image_sizes">
        <item>Small (160px)</item>
        <item>Medium (320px)</item>
        <item>Large (640px)</item>
        <item>Huge (1024px)</item>
        <item>As is</item>
    </string-array>

    <string-array name="preference_themes_titles">
        <item>Default</item>
        <item>Fire</item>
        <item>Water (Dark)</item>
        <item>Air</item>
        <item>Earth</item>
    </string-array>
</resources>
