<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_sidebar_topics">

        <item
            android:id="@+id/menu_item_favorites"
            android:title="@string/favorite_topics"
            android:icon="@drawable/bookmark_list"/>

        <item
            android:id="@+id/menu_item_replies"
            android:title="@string/replies_topics"
            android:icon="@drawable/community"/>

        <item
            android:id="@+id/menu_item_recent"
            android:title="@string/recent_topics"
            android:icon="@drawable/recent"/>

        <item
            android:id="@+id/menu_item_new_messages"
            android:title="@string/new_messages_topics"
            android:icon="@drawable/with_new_messages"/>

    </group>

    <group android:id="@+id/menu_sidebar_my_content">

        <item
            android:id="@+id/menu_item_my_topics"
            android:title="@string/my_topics"
            android:icon="@drawable/my_topics"/>

        <item
            android:id="@+id/menu_item_my_messages"
            android:title="@string/my_messages"
            android:icon="@drawable/my_messages"/>

        <item
            android:id="@+id/menu_item_my_subscriptions"
            android:title="@string/my_subscriptions"
            android:icon="@drawable/my_subscriptions"/>

    </group>

</menu>