<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_donate"
        android:title="@string/menu_donate"
        android:icon="@drawable/heart"/>

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="@drawable/information"/>

</menu>