<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_area"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/source_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <GridLayout
        android:id="@+id/edit_quick_button_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:columnCount="8"
        android:rowCount="2">

        <ImageView
            android:id="@+id/edit_quick_bold"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/bold"
            android:tint="?attr/colorOnSecondary"
            android:contentDescription="@string/bold_font"/>

        <ImageView
            android:id="@+id/edit_quick_italic"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/italic"
            android:tint="?attr/colorOnSecondary"
            android:contentDescription="@string/italic_font"/>

        <ImageView
            android:id="@+id/edit_quick_underlined"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/underlined"
            android:tint="?attr/colorOnSecondary"
            android:contentDescription="@string/underlined_font"/>

        <ImageView
            android:id="@+id/edit_quick_strikethrough"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/strikethrough"
            android:tint="?attr/colorOnSecondary"
            android:contentDescription="@string/strikethrough_font"/>

        <ImageView
            android:id="@+id/edit_quick_code"
            android:layout_row="0"
            android:layout_column="4"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/code"
            android:tint="?attr/colorOnSecondary"
            android:contentDescription="@string/insert_code_block"/>

        <ImageView
            android:id="@+id/edit_quick_quote"
            android:layout_row="0"
            android:layout_column="5"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/quote"
            android:tint="?attr/colorOnSecondary"
            android:contentDescription="@string/insert_quote_block"/>

        <ImageView
            android:id="@+id/edit_quick_number_list"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/numbered_list"
            android:tint="?attr/colorOnSecondary"
            android:contentDescription="@string/insert_numbered_list"/>

        <ImageView
            android:id="@+id/edit_quick_bullet_list"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/bulleted_list"
            android:tint="?attr/colorOnSecondary"
            android:contentDescription="@string/insert_bulleted_list"/>

        <ImageView
            android:id="@+id/edit_quick_link"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/link"
            android:tint="?attr/colorOnSecondary"
            android:contentDescription="@string/insert_link"/>

        <ImageView
            android:id="@+id/edit_quick_image"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/image"
            android:tint="?attr/colorOnSecondary"
            android:contentDescription="@string/insert_image"/>

        <ImageView
            android:id="@+id/edit_quick_more"
            android:layout_row="1"
            android:layout_column="4"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/more"
            android:tint="?attr/colorOnSecondary"
            android:contentDescription="@string/insert_spoiler_tag"/>

    </GridLayout>

    <CheckBox
        android:id="@+id/edit_insert_from_clipboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_gravity="start"
        android:text="@string/insert_from_clipboard" />

</LinearLayout>